# effective_python_with_ai_assistants

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pylint.yml
src/: __init__.py
src/explain/: a.py  b.py  number_of_lands.py
src/tdd/: insurance.py  loyalty_program_rules.py  risk_analysis.py  single_street_controller.py
src/unittesting/: car_rules.py
src/write/: dna.py  loyalty_program.py
test/explain/: test_number_of_lands.py
test/tdd/: test_insurance.py  test_loyalty_program_rules.py  test_risk_analysis.py  test_single_street_controller.py
test/unittesting/: test_car_rules.py
